# RiemannIntegrabilityTest

./: CMakeLists.txt  main.cpp
src/lstu/rit/: Partition.cpp  Partition.hpp  Segment.cpp  Segment.hpp  epsmath.hpp
